refactor exceptions package naming in customer service